# velox

./: CMakeLists.txt  rebase.txt
.github/workflows/: benchmark.yml  breeze.yml  build-metrics.yml  docker.yml  docs.yml  experimental.yml  gluten.yml  gluten_daily.yml  linux-build-base.yml  linux-build.yml  macos.yml  scheduled.yml
velox/benchmarks/: QueryBenchmarkBase.cpp  QueryBenchmarkBase.h
velox/connectors/: CMakeLists.txt  Connector.h
velox/connectors/hiveV2/: CMakeLists.txt  HiveConfig.cpp  HiveConfig.h  HiveConnector.cpp  HiveConnector.h  HiveConnectorSplit.cpp  HiveConnectorSplit.h  HiveConnectorUtil.cpp  HiveConnectorUtil.h  HiveDataSink.cpp  HiveDataSink.h  HiveDataSource.cpp  HiveDataSource.h  HivePartitionFunction.cpp  HivePartitionFunction.h  HivePartitionUtil.cpp  HivePartitionUtil.h  HiveSplitReader.cpp  HiveSplitReader.h  HiveTableHandle.cpp  HiveTableHandle.h  PartitionIdGenerator.cpp  PartitionIdGenerator.h
velox/connectors/hiveV2/benchmarks/: HivePartitionFunctionBenchmark.cpp
velox/connectors/hiveV2/tests/: CMakeLists.txt  HiveConfigTest.cpp  HiveConnectorSerDeTest.cpp  HiveConnectorTest.cpp  HiveConnectorTestBase.cpp  HiveConnectorTestBase.h  HiveConnectorUtilTest.cpp  HiveDataSinkTest.cpp  HivePartitionFunctionTest.cpp  HivePartitionUtilTest.cpp  HiveSplitTest.cpp  PartitionIdGeneratorTest.cpp  TableHandleTest.cpp
velox/connectors/hive_common/: CMakeLists.txt  ConnectorConfig.cpp  ConnectorConfig.h  ConnectorDataSource.cpp  ConnectorDataSource.h  ConnectorSplitBase.cpp  ConnectorSplitBase.h  ConnectorUtil.cpp  ConnectorUtil.h  FileHandle.cpp  FileHandle.h  FileProperties.h  SplitReader.cpp  SplitReader.h  TableHandle.cpp  TableHandle.h
velox/connectors/hive_common/storage_adapters/abfs/: AbfsFileSystem.cpp  CMakeLists.txt  RegisterAbfsFileSystem.cpp
velox/connectors/hive_common/storage_adapters/abfs/tests/: AbfsCommonTest.cpp  AbfsFileSystemTest.cpp  AzuriteServer.cpp  CMakeLists.txt  MockDataLakeFileClient.h
velox/connectors/hive_common/storage_adapters/gcs/: GcsFileSystem.cpp  RegisterGcsFileSystem.cpp
velox/connectors/hive_common/storage_adapters/gcs/examples/: GcsFileSystemExample.cpp
velox/connectors/hive_common/storage_adapters/gcs/tests/: GcsEmulator.h  GcsFileSystemTest.cpp  GcsInsertTest.cpp  GcsUtilTest.cpp
velox/connectors/hive_common/storage_adapters/hdfs/: RegisterHdfsFileSystem.cpp
velox/connectors/hive_common/storage_adapters/hdfs/tests/: CMakeLists.txt  HdfsFileSystemTest.cpp  HdfsUtilTest.cpp  InsertIntoHdfsTest.cpp
velox/connectors/hive_common/storage_adapters/s3fs/: RegisterS3FileSystem.cpp  S3Util.cpp
velox/connectors/hive_common/storage_adapters/s3fs/tests/: CMakeLists.txt  S3ConfigTest.cpp  S3FileSystemFinalizeTest.cpp  S3FileSystemMetricsTest.cpp  S3FileSystemRegistrationTest.cpp  S3FileSystemTest.cpp  S3InsertTest.cpp  S3MultipleEndpointsTest.cpp  S3ReadTest.cpp  S3Test.h  S3UtilTest.cpp
velox/connectors/hive_common/storage_adapters/test_common/: InsertTest.h
velox/connectors/hive_common/tests/: CMakeLists.txt  ConnectorTestBase.cpp  ConnectorTestBase.h  FileHandleTest.cpp
velox/docs/: configs.rst
velox/examples/: ScanAndSort.cpp
(+314 files in other folders)
